# django-training-worklogger

./: README.md  manage.py  pyproject.toml
exercise2/: asgi.py  settings.py  urls.py  wsgi.py
worklogger/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
worklogger/migrations/: 0001_initial.py
worklogger/templates/: home.html  login.html  register.html
